# fril_ide

./: Biography.docx  CONTRIBUTING.md  FrilLib.lib  QtFril.pro  README.md  foo.py  highlighter.cpp  highlighter.h  ifrilc.h  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
Assignment5-TaskList/: tasklist.md
Assignments/: FinalDesignReport.md
Assignments/Assignment1-Biographies/: Chris_Kothman.md  Saylee_Dharne.md  Vaishnavi_Raghavaraju.md
Assignments/Assignment3-IndividualCapstoneAssessment/: Assignment3-CapstoneAssessment.md
Assignments/Assignment4-DesignDiagrams/: Assignment4-DesignDiagrams.md
Assignments/Assignment5-TaskList/: tasklist.md
Assignments/Assignment6-MilestoneTimeline/: MilestonesTimelineEffortMatrix.md
Assignments/Fall2019/Assignment1-Biographies/: Chris_Kothman.md
Assignments/Fall2019/Assignment2-ProjectDescription/: Project-Description.md
Assignments/Fall2019/Assignment3-IndividualCapstoneAssessment/: Assignment3-SayleeDharne.md  Assignment3-VaishnaviRaghavaraju.md
Assignments/Fall2019/Assignment4-DesignDiagrams/: Assignment4-DesignDiagrams.md
Assignments/Spring2020/Assignment1-TestingPlan/: TestingPlan.md
docs/: CREDITS.txt  index.html
src/: CMakeLists.txt
src/BeautiFRIL/: CMakeLists.txt  bip_list.txt  highlighter.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/app/: CMakeLists.txt  editor.cpp  editor.h  editortabmanager.cpp  editortabmanager.h  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  settingsdialog.cpp  settingsdialog.h
src/app/resources/: bip_list.txt
(+7 files in other folders)
